# SatFish

./: .gitignore  CMakeLists.txt  README.md
CnfRepo/: example.cnf  test.cnf
CnfRepo/SATLIB/RandomUniform/raw/: \benchmarkresults.csv  benchmarkresults.csv
CnfRepo/SATLIB/RandomUniform/simplified/: benchmarkresults.csv  uf100-01.cnf  uf100-010.cnf  uf100-0100.cnf  uf100-011.cnf  uf100-012.cnf  uf100-013.cnf  uf100-014.cnf  uf100-015.cnf  uf100-016.cnf  uf100-017.cnf  uf100-018.cnf  uf100-019.cnf  uf100-02.cnf  uf100-020.cnf  uf100-021.cnf  uf100-022.cnf  uf100-023.cnf  uf100-024.cnf  uf100-025.cnf  uf100-026.cnf  uf100-027.cnf  uf100-028.cnf  uf100-029.cnf  uf100-03.cnf  uf100-030.cnf  uf100-031.cnf  uf100-032.cnf  uf100-033.cnf  uf100-034.cnf  uf100-035.cnf  uf100-036.cnf  uf100-037.cnf  uf100-038.cnf  (+567 more)
CnfRepo/SATLIB/TesingBash/: fixcnfs.sh  simplify_cnfs.sh
CnfRepo/SATLIB/benchmarks results/: randomUniformSimpData.csv
CnfRepo/SATLIB/graphColouring/: graphColouringSimpData.csv  raw\benchmarkresults.csv
apps/: CMakeLists.txt  solverMain.cpp
cmake/: AddCatch2.cmake
include/: CNF.h
include/SatSolver/: Clause.h  DPLL.h
include/satFishLib/: CNF.h  Clause.h  DPLL.h  OccuranceTable.h  OccurrenceTable.h
include/swanseaSatLib/: CNF.h  DPLL.h  OccurrenceTable.h
scripts/: buildandretry  buildandtest  setupbuildconfigs
src/: CMakeLists.txt  CMakelists.txt  CNF.cpp  Clause.cpp  DPLL.cpp  OccuranceTable.cpp  OccurrenceTable.cpp
src/SatSolver/: Clause.cpp  DPLL.cpp
tests/: CMakeLists.txt  CNFTests.cpp  ClauseTests.cpp  DPLLTests.cpp  OccurrenceTableTests.cpp
(+301 files in other folders)
